--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "hotspots-backend",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
